Update: the Schedule now get's filled with the events/days from the firebase. However the css still is not correct: Class schedule.jsp line 78. in here data-event get's assigned the value of what kind of event line 81 will also put this value visible on your screen file schedule.css line 309-317 in here the color get's assigned to said event type. this odly enough does not work. help please

--- a/src/main/webapp/css/schedule.css
+++ b/src/main/webapp/css/schedule.css
@@ -306,31 +306,31 @@ Main Components
   margin-bottom: .2em;
 }
 
-.cd-schedule .single-event[data-event="event-1"],
-.cd-schedule [data-event="event-1"] .header-bg {
+.cd-schedule .single-event[data-event="3"],
+.cd-schedule [data-event="3"] .header-bg {
   /* this is used to set a background color for the event and the modal window */
-  background: #577F92;
+  background: red;
 }
 
-.cd-schedule .single-event[data-event="event-1"]:hover {
-  background: #618da1;
+.cd-schedule .single-event[data-event="3"]:hover {
+  background: black;
 }
 
-.cd-schedule .single-event[data-event="event-2"],
-.cd-schedule [data-event="event-2"] .header-bg {
+.cd-schedule .single-event[data-event="Workshop"],
+.cd-schedule [data-event="Workshop"] .header-bg {
   background: #443453;
 }
 
-.cd-schedule .single-event[data-event="event-2"]:hover {
+.cd-schedule .single-event[data-event="Workshop"]:hover {
   background: #513e63;
 }
 
-.cd-schedule .single-event[data-event="event-3"],
-.cd-schedule [data-event="event-3"] .header-bg {
+.cd-schedule .single-event[data-event="Performance"],
+.cd-schedule [data-event="Performance"] .header-bg {
   background: #A2B9B2;
 }
 
-.cd-schedule .single-event[data-event="event-3"]:hover {
+.cd-schedule .single-event[data-event="Performance"]:hover {
   background: #b1c4be;
 }
 
